# terminal-chess-6

./: .gitignore  Cargo.toml  Makefile  README.md  board.rs  fen_parser.rs  piece.rs  rust.yml
benches/: ansi.rs
board_layouts/fen_custom_format/: hal.txt  out.fen  qxk_check_test.fen
board_layouts/fen_strings/: queen_attack_king.txt  t_eps.txt
src/: game.rs  lib.rs  main.rs  util.rs
src/game/: debug.rs  game.rs  legal_moves.rs  packer.nvim
src/io/: ansi.rs
src/io/ansi/: style.rs
src/util/: data.rs  fen_parser.rs  mod.rs
src/util/data/: stack.rs
