[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "ansi"
harness = false

[[bin]]
name = "game"
path = "./src/game/game.rs"
